# Cobject

./: .gitignore  Cargo.toml  README.md
cengine/: Cargo.toml  README.md
cengine/cfonts/: default.cfont
cengine/src/: carea.rs  cbasic_button.rs  cbox.rs  cbox_cannon.rs  cchar.rs  ccolor.rs  cdrawable.rs  cfont.rs  cimage.rs  cobject.rs  cpixel.rs  cplayer.rs  cpoint.rs  cquad.rs  ctext.rs  ctitle_bar.rs  cutils.rs  cwindow.rs  lib.rs  macros.rs  main.rs
cfonts/: default.cfont
cmacros/: Cargo.toml
cmacros/src/: lib.rs
extras/png_to_imace/src/: main.rs
gfx/: test.imace
png_to_imace/: Cargo.toml
src/: carea.rs  cbasic_button.rs  cbox.rs  cbox_cannon.rs  cbutton.rs  cchar.rs  ccolor.rs  cfont.rs  cimage.rs  cinit.rs  cinput.rs  cinput_listener.rs  ckey.rs  cmouse.rs  cobject.rs  cpixel.rs  cplatform.rs  cplayer.rs  cpoint.rs  crect.rs  ctitle_bar.rs  cutils.rs  cwindow.rs  lib.rs  main.rs
