[package]
name = "cobject"
version = "0.1.1"
edition = "2024"
description = "A game engine that uses minifb as a foundation and currently only supports 2D."
homepage = "https://github.com/LaEsperantisto/Cobject"
readme = "README.md"
repository = "https://github.com/LaEsperantisto/Cobject"
license = "MIT"
documentation = "https://docs.rs/Cobject"

[dependencies]
minifb = "0.28.0"
#cmacros = { path = "../cmacros" }

[lib]
path = "src/lib.rs"